# satisfactory-ai

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  DEVELOPMENT.md  GITHUB_SETUP.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  TESTING.md  analyze_factory.py  cli.py  parse_save.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
satisfactory_ai/: __init__.py  analyze_factory.py  cli.py  parse_save.py
tests/: test_analyze_factory.py  test_cli.py  test_parse_save.py
tests/fixtures/: sample_save.json
