[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satisfactory-ai"
version = "0.1.0"
description = "AI-powered factory analyzer for Satisfactory"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Brian Hopkins", email = "totharye.ops@gmail.com" }
]
keywords = ["satisfactory", "ai", "factory", "optimization", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
satisfactory-ai = "satisfactory_ai.cli:cli"

[project.urls]
Homepage = "https://github.com/btotharye/satisfactory-ai"
Repository = "https://github.com/btotharye/satisfactory-ai.git"
Issues = "https://github.com/btotharye/satisfactory-ai/issues"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line too long (handled by black)

[tool.ruff.lint.isort]
known-first-party = ["satisfactory_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["satisfactory_ai"]
omit = ["tests/*", "sat_sav_parse/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
